--- a/gf/Utama.html
+++ b/gf/Utama.html
@@ -116,13 +116,11 @@
         <img src="Girl.jpg" alt="">
     </div>
 
-    <div class="title">For Tina <3</div>
+    <div class="title">For Shazzy <3</div>
 
     <div class="message">
-        <p>I can't express how much i love you in one paragraph.</p>
-        <p>From the eyes,to the face card to the emotionally available person that i know.</p>
-        <p>You fit all the characteristics of a perfect girl that anyone would want to have but they cant have you because i have you ofc.sucks to be them though lol</p>
-        <p>Just know you are loved and appreciated in all aspects ml.I love you <3 </p>
+        <p>As you prepare for your exams, I just want to take a moment to remind you how incredibly talented and capable you are. I believe in you wholeheartedly, and I know that all your hard work will pay off. Stay focused, trust your instincts, and remember to take breaks when you need them. No matter the outcome, I’m proud of you for giving it your all. Good luck—you’ve got this!</p>
+       
     </div>
 
     <div class="message-2">
